# cNeRF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: focal.pt  poses.pt
include/: model.h  renderer.h  utils.h
src/: main.cpp  model.cpp  renderer.cpp  utils.cpp
